# quiz_discord_bot

./: main.py  pyproject.toml
cogs/: quiz.py  webhook.py
